<resources>
    <string name="channel_description">Spika App</string>
    <string name="spika">Spika</string>
    <string name="app_version">Version %s %s</string>
    <string name="no_calls_yet">No calls yet.</string>
    <string name="call_history">Call history</string>
    <string name="call_history_search_hint"><font size="14">Search for contact, message, file…</font></string>
    <string name="outgoing">Outgoing</string>
    <string name="chat">Chat</string>
    <string name="no_chats_yet">No chats yet.</string>
    <string name="pin_chat">Pin chat</string>
    <string name="chat_search">Chat Search</string>
    <string name="privacy_explanation">See and share when messages have been read. This applies to all chats.</string>
    <string name="no_username">No Username</string>
    <string name="username">Username</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite_messages">Favourite Messages</string>
    <string name="type_here">message…</string>
    <string name="notifications">Notifications</string>
    <string name="show_notifications">Show Notifications</string>
    <string name="contacts">Contacts</string>
    <string name="save_contact">Add to contacts</string>
    <string name="contact">Contact</string>
    <string name="number_copied">Telephone number copied</string>
    <string name="private_contact_label">Private contact</string>
    <string name="group_label">Group</string>
    <string name="groups_label">Groups</string>
    <string name="recent_chats">Recent chats</string>
    <string name="no_results">No results</string>
    <string name="no_groups_yet">No groups yet</string>
    <string name="contact_search"><font size="14"> Search for contact</font></string>
    <string name="contact_message_search"><font size="14"> Search for room or message</font></string>
    <string name="contact_groups_search"><font size="14"> Search for contacts or groups</font></string>
    <string name="failed_to_send_contacts">Failed to send contacts</string>
    <string name="send_again">Send again</string>
    <string name="settings">Settings</string>
    <string name="privacy">Privacy</string>
    <string name="appearance">Appearance</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="system_theme">System</string>
    <string name="ok">Ok</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="now">Now</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_username_with_exclamation_mark">Enter username!</string>
    <string name="select_photo_my_profile">Select a photo for your profile</string>
    <string name="enter_number_to_use">Enter your phone number to \n start using Spika</string>
    <string name="phone_number">Phone number</string>
    <string name="number_example">Eg. 98726546</string>
    <string name="all_countries">All Countries</string>
    <string name="verification_code_sent">We sent you a verification code on %s!</string>
    <string name="incorrect_code">The code is incorrect!</string>
    <string name="resend_code">Resend code</string>
    <string name="invite_a_friend">Invite a Friend</string>
    <string name="timeout">00:00</string>
    <string name="upload_in_progress">There is an upload in progress. If you leave the screen the upload will automatically fail.</string>
    <string name="upload_file_in_progress">There is an upload in progress. Are you sure you want to cancel the upload?</string>
    <string name="image_failed_upload">Image could not be uploaded. Try again or continue without image. %s</string>
    <string name="picture_upload_failed">Picture upload failed.</string>
    <string name="failed_file_upload">Failed to upload file</string>
    <string name="canceled_file_upload">File upload canceled</string>
    <string name="sound">Sound</string>
    <string name="photos">Photos</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="documents">Documents</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="gif">Gif</string>
    <string name="media">%s</string>
    <string name="files">Files</string>
    <string name="file">File</string>
    <string name="file_is_downloading">File is downloading</string>
    <string name="media_is_downloading">Media is downloading</string>
    <string name="download_media">Download</string>
    <string name="library">Library</string>
    <string name="location">Location</string>
    <string name="more_actions">More actions</string>
    <string name="take_photo">Take Photo</string>
    <string name="action">Action</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="shared_media_links_and_docs">Shared Media, Links and Docs</string>
    <string name="save_to_camera_roll">Save to Camera Roll</string>
    <string name="media_auto_download">Media auto-download</string>
    <string name="files_mb_text"> MB</string>
    <string name="generic_shared">%s</string>
    <string name="username_message">%s:</string>
    <string name="you">You</string>
    <string name="storage_permission">Please add storage permission manually</string>
    <string name="saved_to_gallery">Saved to gallery</string>
    <string name="media_error">Unable to fetch images</string>
    <string name="media_links_docs">Media, Links and Docs</string>
    <string name="media_items">Media</string>
    <string name="link_items">Links</string>
    <string name="doc_items">Docs</string>
    <string name="select_members">Select members</string>
    <string name="s_people_selected">%d people selected</string>
    <string name="number_of_members">%d Members</string>
    <string name="users_selected">%d/100 selected</string>
    <string name="create">Create</string>
    <string name="new_chat">New chat</string>
    <string name="mute">Mute chat</string>
    <string name="block">Block</string>
    <string name="report">Report</string>
    <string name="exit">Exit</string>
    <string name="info">Info</string>
    <string name="chat_backup">Chat Backup</string>
    <string name="export_chat">Export Chat</string>
    <string name="delete_all_chats">Delete All Chats</string>
    <string name="country_code_placeholder">+385</string>
    <string name="country_placeholder">Country Placeholder</string>
    <string name="time_placeholder">02:00</string>
    <string name="placeholder_number">1</string>
    <string name="category_placeholder">A</string>
    <string name="placeholder_title">Placeholder Title</string>
    <string name="placeholder_description">Placeholder description</string>
    <string name="placeholder_time">2 min ago</string>
    <string name="new_group">New group</string>
    <string name="new_group_chat">New group chat</string>
    <string name="name_the_group">Name the group</string>
    <string name="group_name">Group name…</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="report_group">Report group</string>
    <string name="remove_from_group">Remove from group</string>
    <string name="remove_person">Are you sure you want to remove %s</string>
    <string name="exit_group">Exit group</string>
    <string name="make_group_admin">Make group admin</string>
    <string name="admin">Admin</string>
    <string name="see_more">See more</string>
    <string name="see_less">See less</string>
    <string name="new_message">New message</string>
    <string name="new_messages">You have %s new message%s</string>
    <string name="no_messages_yet">No messages yet.</string>
    <string name="some_message">Some message</string>
    <string name="resend_message">Resend message</string>
    <string name="message_not_found">Message not found</string>
    <string name="uploading_files">Uploading files</string>
    <string name="upload_in_progress_notification">Upload in progress...</string>
    <string name="resend">Resend</string>
    <string name="cancel_upload">Are you sure you want to cancel the upload?</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="session_expired">Session has expired. Please log in again.</string>
    <string name="room_local_fetch_error">Error while fetching room from the local database</string>
    <string name="failed_room_creation">Failed to create room</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="error_room_exists">Error while checking if room exists</string>
    <string name="delete_chat">Delete chat</string>
    <string name="delete_chat_description">Are you sure you want to delete this conversation?</string>
    <string name="exit_group_description">Are you sure you want to exit group?</string>
    <string name="exit_group_error">Can\'t leave group where you are only admin.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="room_delete_admin_error">Only admins can delete conversations.</string>
    <string name="room_exit">You can’t send messages to this group because you are no longer a participant</string>
    <string name="failed_user_data">Failed to load user data.</string>
    <string name="failed_user_image">Failed to load user image.</string>
    <string name="you_sent_on">You sent on %s</string>
    <string name="user_sent_on">%s sent on %s</string>
    <string name="more">MORE</string>
    <string name="audio_duration">00:00</string>
    <string name="video_duration">0 s</string>
    <string name="videos">Videos</string>
    <string name="images">Images</string>
    <string name="video_error">Video is too large</string>
    <string name="no_media_yet">No media yet</string>
    <string name="no_links_yet">No links yet</string>
    <string name="no_docs_yet">No docs yet</string>
    <string name="thumbs_up_emoji">&#x1F44D;</string>
    <string name="praying_hands_emoji">&#x1F64F;</string>
    <string name="crying_face_emoji">&#x1F602;</string>
    <string name="heart_emoji">&#x2764;&#xFE0F;</string>
    <string name="astonished_emoji">&#x1F632;</string>
    <string name="disappointed_relieved_emoji">&#x1F625;</string>
    <string name="reply">Reply</string>
    <string name="forward">Forward</string>
    <string name="forwarded">forwarded</string>
    <string name="forward_messages">Forward messages</string>
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="reactions">Reactions</string>
    <string name="favorite">Favorite</string>
    <string name="delete">Delete</string>
    <string name="delete_for_everyone">Delete for everyone</string>
    <string name="delete_for_me">Delete for me</string>
    <string name="message_deleted_text"><i>This message is deleted</i></string>
    <string name="deleted_message">Deleted message</string>
    <string name="save">Save</string>
    <string name="edited">edited</string>
    <string name="text_copied">Text copied</string>
    <string name="tap_to_remove">Tap to remove</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_body">Enter body</string>
    <string name="zero_minutes_ago">0 minutes ago</string>
    <string name="in_zero_minutes">In 0 minutes</string>
    <string name="registration_error">Registration error</string>
    <string name="registration_error_description">There was an error while registering to the app.</string>
    <string name="wrong_file_type">Wrong file type selected</string>
    <string name="failed_room_update">Failed to update room</string>
    <string name="read_by">Read</string>
    <string name="delivered_to">Delivered</string>
</resources>