<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_emoji"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:backgroundTint="?attr/secondaryColor"
    android:longClickable="true"
    android:weightSum="7"
    tools:ignore="contentDescription">

    <com.vanniktech.emoji.EmojiTextView
        android:id="@+id/tv_thumbs_up_emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/five_dp_margin"
        android:text="@string/thumbs_up_emoji"
        android:textSize="@dimen/twenty_four_sp_text" />

    <com.vanniktech.emoji.EmojiTextView
        android:id="@+id/tv_heart_emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/five_dp_margin"
        android:text="@string/heart_emoji"
        android:textSize="@dimen/twenty_four_sp_text" />

    <com.vanniktech.emoji.EmojiTextView
        android:id="@+id/tv_crying_emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/five_dp_margin"
        android:text="@string/crying_face_emoji"
        android:textSize="@dimen/twenty_four_sp_text" />

    <com.vanniktech.emoji.EmojiTextView
        android:id="@+id/tv_astonished_emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/five_dp_margin"
        android:text="@string/astonished_emoji"
        android:textSize="@dimen/twenty_four_sp_text" />

    <com.vanniktech.emoji.EmojiTextView
        android:id="@+id/tv_disappointed_relieved_emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/five_dp_margin"
        android:text="@string/disappointed_relieved_emoji"
        android:textSize="@dimen/twenty_four_sp_text" />

    <com.vanniktech.emoji.EmojiTextView
        android:id="@+id/tv_praying_hands_emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/five_dp_margin"
        android:text="@string/praying_hands_emoji"
        android:textSize="@dimen/twenty_four_sp_text" />

    <ImageView
        android:id="@+id/iv_add_reaction"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/five_dp_margin"
        android:src="@drawable/img_add_reaction" />
</LinearLayout>
