<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cl_emoji"
        android:background="@color/white"
        android:longClickable="true">

        <com.vanniktech.emoji.EmojiTextView
            android:id="@+id/tv_thumbs_up_emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:padding="@dimen/five_dp_margin"
            android:text="@string/thumbs_up_emoji"
            android:textSize="@dimen/twenty_sp_text"
            app:emojiSize="@dimen/thirty_dp_margin"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.vanniktech.emoji.EmojiTextView
            android:id="@+id/tv_heart_emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dp_margin"
            android:focusable="true"
            android:padding="@dimen/five_dp_margin"
            android:text="@string/heart_emoji"
            android:textSize="@dimen/twenty_sp_text"
            app:emojiSize="@dimen/thirty_dp_margin"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintStart_toEndOf="@+id/tv_thumbs_up_emoji"
            app:layout_constraintTop_toTopOf="parent" />

        <com.vanniktech.emoji.EmojiTextView
            android:id="@+id/tv_crying_emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dp_margin"
            android:focusable="true"
            android:padding="@dimen/five_dp_margin"
            android:text="@string/crying_face_emoji"
            android:textSize="@dimen/twenty_sp_text"
            app:emojiSize="@dimen/thirty_dp_margin"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintStart_toEndOf="@+id/tv_heart_emoji"
            app:layout_constraintTop_toTopOf="parent" />

        <com.vanniktech.emoji.EmojiTextView
            android:id="@+id/tv_astonished_emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dp_margin"
            android:focusable="true"
            android:padding="@dimen/five_dp_margin"
            android:text="@string/astonished_emoji"
            android:textSize="@dimen/twenty_sp_text"
            app:emojiSize="@dimen/thirty_dp_margin"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintStart_toEndOf="@+id/tv_crying_emoji"
            app:layout_constraintTop_toTopOf="parent" />

        <com.vanniktech.emoji.EmojiTextView
            android:id="@+id/tv_disappointed_relieved_emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dp_margin"
            android:focusable="true"
            android:padding="@dimen/five_dp_margin"
            android:text="@string/disappointed_relieved_emoji"
            android:textSize="@dimen/twenty_sp_text"
            app:emojiSize="@dimen/thirty_dp_margin"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintStart_toEndOf="@+id/tv_astonished_emoji"
            app:layout_constraintTop_toTopOf="parent" />

        <com.vanniktech.emoji.EmojiTextView
            android:id="@+id/tv_praying_hands_emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dp_margin"
            android:focusable="true"
            android:padding="@dimen/five_dp_margin"
            android:text="@string/praying_hands_emoji"
            android:textSize="@dimen/twenty_sp_text"
            app:emojiSize="@dimen/thirty_dp_margin"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintStart_toEndOf="@+id/tv_disappointed_relieved_emoji"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>